# client

./: .gitignore  AGENTS.md  ANDROID.md  APPLE.md  CHANGELOG.md  CLI.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DATASET_FORMAT.md  Makefile  NOTICE.md  Package.swift  README.md  SECURITY.md  SONAR_INTEGRATION.md  SUPPORT.md  TESTING.md  codecov.yml  release.toml  requirements.in  requirements.txt  sonar-project.properties  sonar.py  test.py  test_parameter.py  test_snapshots.py
.cargo/: audit.toml
.config/: nextest.toml
.github/: WORKFLOW_ARCHITECTURE.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/scripts/: generate_sbom.sh
.github/workflows/: build.yml  ci.yml  deps.yml  mobile.yml  nightly.yml  python.yml  release.yml  sbom.yml  studio.yml  test.yml
artifacts/kotlin/ai/edgefirst/client/: edgefirst_client_ffi.kt
crates/edgefirst-cli/: Cargo.toml
crates/edgefirst-cli/src/: main.rs
crates/edgefirst-cli/tests/: cli.rs
crates/edgefirst-client/: Cargo.toml
crates/edgefirst-client-ffi/: Cargo.toml  uniffi.toml
crates/edgefirst-client-ffi/src/: lib.rs
crates/edgefirst-client-py/: Cargo.toml  edgefirst_client.pyi  pyproject.toml
crates/edgefirst-client-py/src/: lib.rs
crates/edgefirst-client/examples/: populate_with_circle.rs
crates/edgefirst-client/src/: api.rs  client.rs  dataset.rs  error.rs  format.rs  instrument.rs  lib.rs  mask.rs  retry.rs  storage.rs
crates/edgefirst-client/src/coco/: arrow.rs  convert.rs  mod.rs  reader.rs  studio.rs  tests.rs  types.rs  verify.rs  writer.rs
crates/edgefirst-client/tests/: coco_integration.rs  wiremock_coverage.rs
crates/uniffi-bindgen/: Cargo.toml
crates/uniffi-bindgen/src/: main.rs
examples/: 01_authentication.ipynb  01_authentication.py  02_explore_dataset.ipynb  02_explore_dataset.py  03_fetch_annotations.ipynb  03_fetch_annotations.py  04_polars_dataframe.ipynb  04_polars_dataframe.py  05_download_dataset.ipynb  05_download_dataset.py  06_create_annotations.ipynb  06_create_annotations.py  07_manage_labels.ipynb  07_manage_labels.py  README.md  __init__.py  _path.py  coco.py  coco_semseg.py  download.py  requirements.txt
swift/: EdgeFirstClient.swift
swift-sdk-temp/swift/: EdgeFirstClient.swift
swift/EdgeFirstClientTests/: AnnotationTypeTests.swift  ArtifactTests.swift  ClientTests.swift  DatasetTests.swift  DomainStructTests.swift  EdgeCaseTests.swift  EntityTests.swift  ErrorTests.swift  ExperimentTests.swift  FileTypeTests.swift  IDFormatTests.swift  IdTypeTests.swift  ParameterTests.swift  ProjectTests.swift  SampleTests.swift  SchemaTests.swift  SnapshotTests.swift  StorageErrorTests.swift  StorageTests.swift  TaskInfoTests.swift  TestConfig.swift
test/: __init__.py  fixtures.py  test_advanced.py  test_client.py  test_coco.py  test_coco_roundtrip.py  test_coco_studio_roundtrip.py  test_datasets.py  test_deer_annotations_raw.py  test_examples.py  test_experiments.py  test_ids.py  test_jobs.py  test_parameter.py  test_snapshots.py  test_storage.py  test_task_charts.py  test_task_data.py  test_val_data.py  test_versioning.py
