[workspace]
resolver = "3"
members = ["crates/*"]
default-members = ["crates/edgefirst-client", "crates/edgefirst-cli"]

[workspace.package]
description = "EdgeFirst Client Library and CLI"
authors = ["Au-Zone Technologies <support@au-zone.com>"]
homepage = "https://edgefirst.ai"
repository = "https://github.com/EdgeFirstAI/client"
readme = "README.md"
license = "Apache-2.0"
version = "2.8.0"
edition = "2024"

[workspace.dependencies]
assert_cmd = "2.1.1"
base64 = "0.22.1"
chrono = { version = "0.4.42", default-features = false, features = [
    "clock",
    "iana-time-zone",
    "now",
    "serde",
] }
clap = { version = "4.5.53", features = ["derive", "env"] }
config = "0.15.19"
ctor = "0.6.2"
directories = "6.0.0"
edgefirst-client = { version = "2.5.0", path = "crates/edgefirst-client" }
env_logger = "0.11.8"
futures = "0.3.31"
imagesize = "0.14.0"
indicatif = "0.18.3"
infer = "0.19.0"
inquire = "0.9.1"
itertools = "0.14.0"
log = "0.4.29"
polars = { version = "0.52.0", default-features = false, features = [
    "dtype-array",
    "dtype-categorical",
    "ipc",
    "partition_by",
] }
predicates = "3.1.0"
pyo3 = { version = "0.26.0", features = [
    "extension-module",
    "abi3-py38",
    "chrono",
    "serde",
] }
pyo3-polars = "0.25.0"
reqwest = { version = "0.12.24", default-features = false, features = [
    "json",
    "multipart",
    "rustls-tls",
    "stream",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serial_test = { version = "3.2.0", features = ["file_locks"] }
sha1 = "0.10.6"
sha2 = "0.10.8"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["full", "rt-multi-thread"] }
tokio-util = { version = "0.7.17", features = ["codec"] }
tokio-wrap = "0.0.3"
uniffi = "0.30.0"
url = "2.5.4"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
walkdir = "2.5.0"
zip = { version = "6.0.0", default-features = false, features = ["deflate"] }

[profile.release]
opt-level = 3
lto = true
strip = true
debug = false

# Disable stripping for the FFI crate to preserve UniFFI metadata
# This is required for uniffi-bindgen to extract bindings from the library
[profile.release.package.edgefirst-client-ffi]
strip = false

[profile.profiling]
inherits = "release"
strip = false
debug = true
