[workspace]
resolver = "3"
members = ["crates/*"]
default-members = ["crates/edgefirst-client", "crates/edgefirst-cli"]

[workspace.package]
description = "EdgeFirst Client Library and CLI"
authors = ["Au-Zone Technologies <support@au-zone.com>"]
homepage = "https://edgefirst.ai"
repository = "https://github.com/EdgeFirstAI/client"
readme = "README.md"
license = "Apache-2.0"
version = "2.10.3"
edition = "2024"

[workspace.dependencies]
assert_cmd = "2.2.2"
base64 = "0.22.1"
chrono = { version = "0.4.45", default-features = false, features = [
    "clock",
    "iana-time-zone",
    "now",
    "serde",
] }
clap = { version = "4.6.1", features = ["derive", "env"] }
config = "0.15.23"
ctor = "1.0.7"
directories = "6.0.0"
edgefirst-client = { version = "2.10.3", path = "crates/edgefirst-client" }
env_logger = "0.11.10"
futures = "0.3.32"
imagesize = "0.14.0"
indicatif = "0.18.4"
infer = "0.19.0"
inquire = "0.9.4"
itertools = "0.14.0"
log = "0.4.32"
polars = { version = "0.54.4", default-features = false, features = [
    "dtype-array",
    "dtype-categorical",
    "dtype-struct",
    "ipc",
    "partition_by",
] }
predicates = "3.1.4"
rand = "0.10.1"
rayon = "1.12"
pyo3 = { version = "0.28", features = [
    "extension-module",
    "abi3-py38",
    "chrono",
    "serde",
] }
pyo3-polars = "0.27.0"
reqwest = { version = "0.13.4", default-features = false, features = [
    "json",
    "multipart",
    "rustls",
    "stream",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serial_test = { version = "3.5.0", features = ["file_locks"] }
sha1 = "0.11.0"
sha2 = "0.11.0"
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["full", "rt-multi-thread"] }
tokio-util = { version = "0.7.18", features = ["codec", "io"] }
tokio-wrap = "0.0.3"
tracing = "0.1.44"
tracing-chrome = "0.7.2"
tracing-perfetto = "0.1.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uniffi = "0.31.1"
url = "2.5.8"
uuid = { version = "1.23.3", features = ["v4", "serde"] }
walkdir = "2.5.0"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[profile.release]
opt-level = 3
lto = true
strip = true
debug = false

# Disable stripping for the FFI crate to preserve UniFFI metadata
# This is required for uniffi-bindgen to extract bindings from the library
[profile.release.package.edgefirst-client-ffi]
strip = false

[profile.profiling]
inherits = "release"
strip = false
debug = true
