[package]
name = "edgefirst-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[[bin]]
name = "edgefirst-client"
path = "src/main.rs"

[features]
default = ["polars"]
polars = ["dep:polars"]

[dependencies]
clap = { workspace = true }
edgefirst-client = { workspace = true }
env_logger = { workspace = true }
indicatif = { workspace = true }
inquire = { workspace = true }
polars = { workspace = true, optional = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
directories = { workspace = true }
predicates = { workspace = true}
serial_test = { workspace = true }
