[package]
name = "edgefirst-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[[bin]]
name = "edgefirst-client"
path = "src/main.rs"

[features]
default = ["polars"]
polars = ["dep:polars"]

# Umbrella feature for all profiling instrumentation
profiling = ["edgefirst-client/profiling", "dep:tracing", "dep:tracing-subscriber"]

# Tracy real-time profiling
tracy = [
    "profiling",
    "edgefirst-client/tracy",
    "dep:tracy-client",
    "dep:tracing-tracy",
    "tracy-client/enable",
    "tracing-tracy/enable",
]

# Portable trace file output - Chrome/Perfetto JSON format
trace-file = ["profiling", "edgefirst-client/trace-file", "dep:tracing-chrome"]

# All profiling backends combined
profiling-full = ["tracy", "trace-file"]

[dependencies]
chrono = { workspace = true }
clap = { workspace = true }
edgefirst-client = { workspace = true }
env_logger = { workspace = true }
indicatif = { workspace = true }
inquire = { workspace = true }
log = { workspace = true }
polars = { workspace = true, optional = true }
rayon = { workspace = true }
serde_json = { workspace = true }
sha1 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true, optional = true }
tracing-chrome = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
tracing-tracy = { workspace = true, optional = true }
tracy-client = { workspace = true, optional = true }
uuid = { workspace = true }
walkdir = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
base64 = { workspace = true }
directories = { workspace = true }
predicates = { workspace = true }
serial_test = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
zip = { workspace = true }
