[project]
name = "edgefirst_client"
requires-python = ">=3.8"
dependencies = ["polars"]
dynamic = ["version"]

[project.urls]
Homepage = "https://edgefirst.studio"
Documentation = "https://doc.edgefirst.ai"

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.maturin]
# features = ["polars"]

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pyright]
reportUnusedImport = false
reportUnusedVariable = false
