[project]
name = "edgefirst_client"
requires-python = ">=3.8"
# Bounded version constraint matches ``requirements.in`` so the wheel
# and the CI test deps consume the same polars major. Sonar's
# ``text:S8565`` rule rejects pure ``"polars"`` declarations as
# non-reproducible; the range gives pip a well-defined resolution
# window without exact-pinning (which would prevent patch updates).
dependencies = ["polars>=1.35,<2"]
dynamic = ["version"]
# Matches workspace `license = "Apache-2.0"` in /Cargo.toml. Declared
# here so scancode resolves the Python wheel's license at SBOM time
# instead of flagging it as unknown — the wheel and the Rust crate
# ship under the same Apache-2.0 terms.
license = "Apache-2.0"
authors = [{ name = "Au-Zone Technologies", email = "support@au-zone.com" }]

[project.urls]
Homepage = "https://edgefirst.studio"
Documentation = "https://doc.edgefirst.ai"

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.maturin]
# features = ["polars"]

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pyright]
reportUnusedImport = false
reportUnusedVariable = false
