[package]
name = "edgefirst-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["polars"]
polars = ["dep:polars"]

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
ctor = { workspace = true }
directories = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
imagesize = { workspace = true }
infer = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
polars = { workspace = true, optional = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
image = { version = "0.25", features = ["jpeg", "png"] }
png = "0.17"
rand = { version = "0.9", features = ["std_rng"] }
sha1 = { workspace = true }
