[package]
name = "edgefirst-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["polars"]
polars = ["dep:polars"]
tracy = [
    "dep:tracing",
    "dep:tracy-client",
    "dep:tracing-tracy",
    "tracy-client/enable",
    "tracing-tracy/enable",
]

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
ctor = { workspace = true }
directories = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
imagesize = { workspace = true }
infer = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
pathfinding = "4.11"
polars = { workspace = true, optional = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true, optional = true }
tracing-tracy = { workspace = true, optional = true }
tracy-client = { workspace = true, optional = true }
url = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
dirs = "5.0"
image = { version = "0.25", features = ["jpeg", "png"] }
pathfinding = "4.11"
png = "0.17"
rand = { workspace = true }
sha1 = { workspace = true }
tempfile = { workspace = true }
