[package]
name = "uniffi-bindgen"
description = "UniFFI binding generator for EdgeFirst Client"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "uniffi-bindgen"
path = "src/main.rs"

[dependencies]
uniffi = { workspace = true, features = ["cli"] }
